--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -11,7 +11,7 @@
   <input style="background:gold; width: 300px; height: 100px;" type="button" onclick="location.href='product_input.do'" value="제품입력">
   <input style="background:gold; width: 300px; height: 100px;" type="button" onclick="location.href='product_output.do'" value="제품조회 및 수정">
   <br>
-  <input style="background:gold; width: 300px; height: 100px;" type="button" onclick="location.href='priority.jsp'" value="우선생산제품">
+  <input style="background:gold; width: 300px; height: 100px;" type="button" onclick="location.href='priority.do'" value="우선생산제품">
   <input style="background:gold; width: 300px; height: 100px;" type="button" onclick="location.href='profit.jsp'" value="이익순위">
   <br>
   <input style="background:gold; width: 300px; height: 100px;" type="button" onclick="location.href='stock.jsp'" value="그룹별 재고수량">
